Added two proposition routes
